0.62.7
------
1. For right-to-left progressbars, make animation go right-to-left - matches KDE.
2. Detect seamonkey as a Mozilla app.

0.62.6
------
1. Alter meunbar item widths slightly to make more consistent with KDE4.
2. If QTC_NEW_MOZILLA is not set, don't allow faded menuitems for thunderbird -
   these just don't work here. In thunderbird it is not possible to detect if a
   menuitem is on a menubar, or in a popup menu :-(
3. Make file chooser's pathbar buttons more KDE4 like. This is not 100%, as there
   are no ">" arrows. To seperate items a light gray "/" is drawn.
4. Improve entry focus highlight when round>full.
5. Don't use max round for close buttons on GEdit's tabs.

0.62.5
------
1. Use gradient for filled slider - unless appearance is flat/raised.
2. Slightly alter listview header size.
3. Fix white-on-white text of disabled listviews - noticable in synaptic.
4. If a toolbar is disabled, so should the handle be.

0.62.4
------
1. When drawing filled slider groove, use fill colour for border as well.
2. Better positioning of V arrows on secondary scrollbar buttons.
3. Improve appearance of GtkCombo edit field.

0.62.3
------
1. Fix setting of custom non-default icon themes.
2. When creating icon map, check for icons in non-default style first,
   and then check default.
3. Improve appearance GtkCombo poup menu (even though this is actually
   a deprecated widget!)
4. When menubars have a border, adjust the menubar items accordingly.
5. When filling the used part of a slider groove, use the slider colour 
   if set, otherwise use the highlight colour.

0.62.2
------
1. Improve appearance of progressbars in listviews (such as in d4x)
2. Call kde-config (KDE3) / kde4-config (KDE4) to determine location
   of system icons for creating icon map.
 
0.62.1
------
1. Use highlight colour for unselected focused view items.
2. Fix saving/reading of custom shades.
3. Fix reading of boolean values from kdeglobals.
4. Fix some slight tab drawing glitches.